[package]
name = "routie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
png = "0.17"
cairo-rs = { version = "0.15", features = ["png"] }
nalgebra = "0.31"
lyon_geom = "1.0.3"
skiplist = "0.4.0"
pathfinding = "4.2.0"
